--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,17 @@ allprojects {
   group = "io.spinnaker.orca"
 
   tasks.withType(JavaExec) {
+    jvmArgs '-XX:+PreserveFramePointer',
+        '-XX:+UnlockDiagnosticVMOptions',
+        '-XX:+DebugNonSafepoints',
+        '-XX:+HeapDumpOnOutOfMemoryError'
+
     if (System.getProperty('DEBUG', 'false') == 'true') {
-      jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8183'
+      jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8183',
+          '-XX:+PreserveFramePointer',
+          '-XX:+UnlockDiagnosticVMOptions',
+          '-XX:+DebugNonSafepoints',
+          '-XX:+HeapDumpOnOutOfMemoryError'
     }
   }
 }
